SERVER-66310 Make ExpressionSetUnion::isCommutative() collation aware

(cherry picked from commit 2c53b7b684c8dd90044b8ef19932453088f54869)